# SuperTokens-Blog-Related-Code

./: .gitignore  README.md
angular_authentication/: README.md
angular_authentication/backend/: .env  package-lock.json  package.json  server.js
angular_authentication/frontend/src/app/: app.config.ts  app.routes.ts
angular_authentication/frontend/src/app/auth/: auth.service.ts
angular_authentication/frontend/src/app/auth/login/: login.component.ts
angular_authentication/frontend/src/app/dashboard/: dashboard.component.ts
angular_authentication/frontend/src/app/guards/: auth.guard.ts
angular_authentication/frontend/src/app/interceptors/: jwt.interceptor.ts
phishing_resistant_MFA/pr_mfa/: package-lock.json  package.json
phishing_resistant_MFA/pr_mfa/backend/: config.ts  jest.config.js  main.ts  package-lock.json  package.json
phishing_resistant_MFA/pr_mfa/backend/__tests__/: auth-flow.test.ts  setup.ts
phishing_resistant_MFA/pr_mfa/frontend/: package-lock.json
phishing_resistant_MFA/pr_mfa/frontend/src/: config.tsx
sso-providers/: instructions.md
sso-providers/python-sso-with-supertokens/: package-lock.json  package.json
sso-providers/python-sso-with-supertokens/backend/: config.py
sso-providers/python-sso-with-supertokens/frontend/src/: config.ts
sso-providers/sso-with-supertokens/: package-lock.json  package.json  pyproject.toml
sso-providers/sso-with-supertokens/app/: main.py
sso-providers/sso-with-supertokens/backend/: config.ts  package-lock.json
sso-providers/sso-with-supertokens/frontend/: package-lock.json
(+1 files in other folders)
